crates/pg_syntax/tests/snapshots/postgres_regress/subselect@108.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select view_a from view_a;
---
SelectStmt@0..26
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..13
    ColumnRef@7..13
      Ident@7..13 "view_a"
  Whitespace@13..14 " "
  From@14..18 "from"
  Whitespace@18..19 " "
  RangeVar@19..25
    Ident@19..25 "view_a"
  Ascii59@25..26 ";"

