crates/pg_syntax/tests/snapshots/postgres_regress/subselect@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ((SELECT ARRAY[1,2,3]))[2];"
---
SelectStmt@0..34
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..32
    AIndirection@7..32
      SubLink@7..27
        SelectStmt@7..27
          Ascii40@7..8 "("
          Ascii40@8..9 "("
          Select@9..15 "SELECT"
          Whitespace@15..16 " "
          ResTarget@16..27
            AArrayExpr@16..27
              Array@16..21 "ARRAY"
              Ascii91@21..22 "["
              AConst@22..23
                Iconst@22..23 "1"
              Ascii44@23..24 ","
              AConst@24..25
                Iconst@24..25 "2"
              Ascii44@25..26 ","
              AConst@26..27
                Iconst@26..27 "3"
      Ascii93@27..28 "]"
      Ascii41@28..29 ")"
      Ascii41@29..30 ")"
      Ascii91@30..31 "["
      AIndices@31..32
        AConst@31..32
          Iconst@31..32 "2"
  Ascii93@32..33 "]"
  Ascii59@33..34 ";"

