crates/pg_syntax/tests/snapshots/postgres_regress/subselect@111.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select (select (a.*)::text) from view_a a;"
---
SelectStmt@0..42
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..26
    SubLink@7..26
      SelectStmt@7..26
        Ascii40@7..8 "("
        Select@8..14 "select"
        Whitespace@14..15 " "
        ResTarget@15..26
          Ascii40@15..16 "("
          TypeCast@16..26
            ColumnRef@16..19
              Ident@16..17 "a"
              Ascii46@17..18 "."
              AStar@18..19
                Ascii42@18..19 "*"
            Ascii41@19..20 ")"
            Typecast@20..22 "::"
            TypeName@22..26
              TextP@22..26 "text"
  Ascii41@26..27 ")"
  Whitespace@27..28 " "
  From@28..32 "from"
  Whitespace@32..33 " "
  RangeVar@33..41
    Ident@33..39 "view_a"
    Whitespace@39..40 " "
    Alias@40..41
      Ident@40..41 "a"
  Ascii59@41..42 ";"

